update build env

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+issmoexproxy (0.0.3-1) unstable; urgency=low
+  * 0.0.3: Исправлена ошибка получения пустых котировок\
+ -- destr <destrd@gmail.com>  Sat, 07 Oct 2023 13:50:14 +0400
+
 issmoexproxy (0.0.2-1) unstable; urgency=low
   * 0.0.2: Изменено поле получения цены инструмента с PREVADMITTEDQUOTE на
       PREVLEGALCLOSEPRICE (т.к. API moex перестало отдавать admittedquote)
